# agent

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.rs
src/operations/: mod.rs  prepare_input_artifacts.rs  prepare_output_artifacts.rs  prepare_runtime.rs  register.rs  run_wasmer.rs  update_status.rs  wait_for_job_execution.rs
src/threads/: job_processor.rs  mod.rs
src/utils/: capabilities.rs  filesystem.rs  mod.rs
