[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-sdk = { path = "../rust-sdk" }
tokio = { version = "1.25.0", features = ["full"] }
mongodb = { version = "2.3.1", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
reqwest = "0.11.14"